# octopus

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  configure.ac
debian/: changelog  control
doc/: Makefile.am  octopus.texi
liboct/: oct_f.c  varinfo.c
libxc/: lca.c  lda_x.c
libxc/src/: lda_x_1d.c
m4/: acx_arpack.m4  acx_fft.m4  arch.m4  cuda.m4  metis.m4  nfft.m4
python/: configure.ac
share/opencl/: Makefile.am  batch_mult.cl  mod_sqr.cl  projector.cl  set_one.cl
src/: Makefile.am  atomic.F90  casida.F90  cf.F90  common-rules.make  crystal.F90  derivatives.F90  eigen.F90  eigen_arpack.F90  eigen_trlan.F90  epot.F90  f.F90  f_inc.F90  fftw2.F90  fftw3.F90  filters.F90  geometry.F90  global.h  hgh.F90  io.F90  lcao_inc.F90  linear_response.F90  math.F90  mesh_init.F90  mpi.F90  multicomm.F90  multigrid.F90  opt_control.F90  out_inc.F90  poisson.F90  poisson2D.F90  poisson3D.F90  poisson_cg.F90  poisson_multigrid.F90  ps.F90  run.F90  simul_box.F90  specie.F90  states.F90  systm.F90  (+8 more)
src/basic/: accel.F90  alloc_cache.F90  blacs_proc_grid.F90  c_pointer.F90  calc_mode_par.F90  comm.F90  command_line.F90  cublas.cc  debug.F90  distributed.F90  iihash.F90  io.F90  io_binary_f.F90  io_binary_f_inc.F90  io_csv_f.F90  linked_list.F90  list_node.F90  loct_pointer.F90  lookup.F90  messages.F90  mpi_debug.F90  multicomm.F90  parser.F90  profiling.F90  sort.F90  space.F90  unit_system.F90  utils.F90  walltimer.F90  write_iter.F90
src/basis_set/: atomic_orbital.F90  atomic_orbital_inc.F90  (+7 more)
testsuite/: Makefile.am  buildbot_query.pl  oct-run_regression_test.pl
(+586 files in other folders)
